2000-02-10  Michael Natterer  <mitch@gimp.org>

	* Makefile.am
	* pixmaps/wilber.xpm: new file.

	* libgimp/gimpdialog.[ch]: uncommented some lines. Depending on
	your window manager, you'll figure out what it does without having
	to look at the sources...

	* app/app_procs.c
	* app/gradient.c
	* app/menus.c: minor changes to bring the goodie above to all
	places. Did dome cleanups.

	* app/commands.c: I18N fix.

	* app/channels_dialog.c: removed an unused declaration.

Wed Feb  9 23:47:08 CET 2000  Sven Neumann <sven@gimp.org>

	* app/interface.c
	* app/pixmaps2.h
	* app/tools.c: use new icons courtesy by Tigert.

	* plug-ins/common/gauss_iir.c
	* plug-ins/common/gauss_rle.c
	* plug-ins/common/spread.c: enlarged maximum values

2000-02-09  Garry R. Osgood <gosgood@idt.net>

        * gimp/plug-ins/common/randomize.c
	Inadvertent use of wrong adjustment
	update callback failed to get proper
	value of randomizing count from GUI.
	[line 771, CVS-1.28] Closes #5948.
	
Mit Feb  9 15:32:39 CET 2000  Sven Neumann <sven@gimp.org>

	* app/menus.c: an attempt to guard us against badly translated
	menu_entries which may result in a crash when passed to 
	gtk_item_factory_parse_path (). This might fix bug #6052.

2000-02-09  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/film.c: hacked the ui and added widgets for
	the advanced options.

Tue Feb  8 21:35:10 CET 2000  Sven Neumann <sven@gimp.org>

	* app/devices.c
	* app/gimpdnd.c
	* app/interface.c
	* app/interface.h
	* app/tools.c
	* app/tools.h: create the pixmaps in the image_window and in the
	toolbox static and reuse them everywhere. Added tool pixmaps to
	the tool_options dialog as an extra goodie. Should help to 
	visualize that these are tools.
   
2000-02-08  Michael Natterer  <mitch@gimp.org>

	* app/by_color_select.c: show our selection mode cursors (REPLACE,
	ADD, ...) depending on the modifier state and the "Selection Mode"
	toggles in the tool's dialog.

2000-02-08  Michael Natterer  <mitch@gimp.org>
