@@ -1,5 +1,10 @@
 2000-02-10  Michael Natterer  <mitch@gimp.org>
 
+	* app/tools.c: you can now drag the active tool out of the tool
+	options dialog title. Added a tooltip.
+
+2000-02-10  Michael Natterer  <mitch@gimp.org>
+
 	* Makefile.am
 	* pixmaps/wilber.xpm: new file.
 
